better location read, request gps if off

--- a/BioadresarAndroid/web/index.html
+++ b/BioadresarAndroid/web/index.html
@@ -7,7 +7,8 @@
 	<META NAME="AUTHOR" CONTENT="loki ">
 	<META NAME="CREATED" CONTENT="20120819;18483400">
 	<META NAME="CHANGEDBY" CONTENT="loki ">
-	<META NAME="CHANGED" CONTENT="20121216;21141600">
+	<META NAME="CHANGED" CONTENT="20130113;22093500">
+	<META NAME="CHANGEDBY" CONTENT="loki ">
 	<META NAME="CHANGEDBY" CONTENT="loki ">
 	<META NAME="CHANGEDBY" CONTENT="loki ">
 	<META NAME="CHANGEDBY" CONTENT="loki ">
@@ -32,8 +33,14 @@ chyby</FONT></FONT></P>
 <UL>
 	<LI><P>v seznamu, první puštění “dalších 25” načte 25 –
 	count(zobrazené farmy)</P>
-	<LI><P>načtení nové polohy v mapě a seznamu nerefreshuje
-	vzdálenosti (pořadí)</P>
+	<LI><P>alert dialog na zapnutí gps nečeká na odpověď</P>
+</UL>
+<P STYLE="margin-top: 0.17in; page-break-after: avoid"><FONT FACE="Albany, sans-serif"><FONT SIZE=4>Changelog
+Beta3 – Beta4</FONT></FONT></P>
+<UL>
+	<LI><P STYLE="margin-top: 0.17in"><FONT FACE="Liberation Sans, sans-serif"><FONT SIZE=3><FONT FACE="Liberation Serif, serif">načítá
+	změny polohy, na tlačítko aktualizovat polohu věci skutečně
+	přepočítá</FONT></FONT></FONT></P>
 </UL>
 <P STYLE="margin-top: 0.17in; page-break-after: avoid"><FONT FACE="Albany, sans-serif"><FONT SIZE=4>Changelog
 Beta2 – Beta3</FONT></FONT></P>
@@ -78,9 +85,7 @@ list</FONT></FONT></P>
 	<LI><P>cachování map (bude možná potřebovat přejít na
 	<A HREF="https://code.google.com/p/osmdroid/">https://code.google.com/p/osmdroid/</A>
 	nebo bing nebo amazon or whatever)</P>
-	<LI><P>reset view on location change</P>
-	<LI><P>poradne nacitani polohy 
-	</P>
+	<LI><P>zobrazovat aktuální polohu na mapě</P>
 	<LI><P>send crash dump</P>
 	<LI><P>integrovat 'naviguj k'</P>
 	<LI><P>testy</P>
