removed use of old tabactivity, use regions as default locations, some cleanups

--- a/BioadresarAndroid/web/index.html
+++ b/BioadresarAndroid/web/index.html
@@ -7,7 +7,8 @@
 	<META NAME="AUTHOR" CONTENT="loki ">
 	<META NAME="CREATED" CONTENT="20120819;18483400">
 	<META NAME="CHANGEDBY" CONTENT="loki ">
-	<META NAME="CHANGED" CONTENT="20130113;22093500">
+	<META NAME="CHANGED" CONTENT="20130127;18413900">
+	<META NAME="CHANGEDBY" CONTENT="loki ">
 	<META NAME="CHANGEDBY" CONTENT="loki ">
 	<META NAME="CHANGEDBY" CONTENT="loki ">
 	<META NAME="CHANGEDBY" CONTENT="loki ">
@@ -28,97 +29,132 @@ verze: <A HREF="http://trilobajt.cz/adresar/AdresarFarmaru-beta2.apk">Beta
 2</A></FONT></FONT></P>
 <P><IMG SRC="qr-beta2.png" NAME="graphics1" ALIGN=BOTTOM WIDTH=312 HEIGHT=312 BORDER=0>
 </P>
-<P STYLE="margin-top: 0.17in; page-break-after: avoid"><FONT FACE="Albany, sans-serif"><FONT SIZE=4>Známé
+<P STYLE="margin-top: 0.17in; page-break-after: avoid"><FONT FACE="Liberation Serif, serif"><FONT SIZE=4>Známé
 chyby</FONT></FONT></P>
 <UL>
-	<LI><P>v seznamu, první puštění “dalších 25” načte 25 –
-	count(zobrazené farmy)</P>
-	<LI><P>alert dialog na zapnutí gps nečeká na odpověď</P>
+	<LI><P><FONT FACE="Liberation Serif, serif">v seznamu, první
+	puštění “dalších 25” načte 25 – count(zobrazené farmy)</FONT></P>
 </UL>
-<P STYLE="margin-top: 0.17in; page-break-after: avoid"><FONT FACE="Albany, sans-serif"><FONT SIZE=4>Changelog
+<P STYLE="margin-top: 0.17in; page-break-after: avoid"><FONT FACE="Liberation Serif, serif"><FONT SIZE=4>Changelog
 Beta3 – Beta4</FONT></FONT></P>
 <UL>
-	<LI><P STYLE="margin-top: 0.17in"><FONT FACE="Liberation Sans, sans-serif"><FONT SIZE=3><FONT FACE="Liberation Serif, serif">načítá
-	změny polohy, na tlačítko aktualizovat polohu věci skutečně
-	přepočítá</FONT></FONT></FONT></P>
+	<LI><P STYLE="margin-top: 0.17in; font-weight: normal"><FONT FACE="Liberation Serif, serif"><FONT SIZE=3>výchozí
+	poloha změněna na kraje</FONT></FONT></P>
+	<LI><P STYLE="margin-top: 0.17in; font-weight: normal"><FONT FACE="Liberation Serif, serif"><FONT SIZE=3>odstraněn
+	dialog na zapnutí gps</FONT></FONT></P>
+	<LI><P STYLE="margin-top: 0.17in; font-weight: normal"><FONT FACE="Liberation Serif, serif"><FONT SIZE=3>defaultní
+	poloha -&gt; výchozí poloha</FONT></FONT></P>
+	<LI><P STYLE="margin-top: 0.17in; font-weight: normal"><FONT FACE="Liberation Serif, serif"><FONT SIZE=3>pokud
+	není nastavena základní obrazovka, zobrazí se “hlavní menu”</FONT></FONT></P>
 </UL>
-<P STYLE="margin-top: 0.17in; page-break-after: avoid"><FONT FACE="Albany, sans-serif"><FONT SIZE=4>Changelog
+<P STYLE="margin-top: 0.17in; page-break-after: avoid"><FONT FACE="Liberation Serif, serif"><FONT SIZE=4>Changelog
+Beta3 – Beta4</FONT></FONT></P>
+<UL>
+	<LI><P STYLE="margin-top: 0.17in"><FONT FACE="Liberation Serif, serif"><FONT SIZE=3>načítá
+	změny polohy, na tlačítko aktualizovat polohu věci skutečně
+	přepočítá</FONT></FONT></P>
+</UL>
+<P STYLE="margin-top: 0.17in; page-break-after: avoid"><FONT FACE="Liberation Serif, serif"><FONT SIZE=4>Changelog
 Beta2 – Beta3</FONT></FONT></P>
 <UL>
 	<LI><P STYLE="margin-top: 0.17in"><FONT FACE="Liberation Serif, serif"><FONT SIZE=3>klasické
 	menu</FONT></FONT></P>
 	<LI><P STYLE="margin-top: 0.17in"><FONT FACE="Liberation Serif, serif"><FONT SIZE=3>aktualizace
 	a pročištění databáze</FONT></FONT></P>
-	<LI><P>přidány poznámky k produkci</P>
-	<LI><P>přidány aktivity (činnosti)</P>
+	<LI><P><FONT FACE="Liberation Serif, serif">přidány poznámky k
+	produkci</FONT></P>
+	<LI><P><FONT FACE="Liberation Serif, serif">přidány aktivity
+	(činnosti)</FONT></P>
 </UL>
-<P STYLE="margin-top: 0.17in"><FONT FACE="Albany, sans-serif"><FONT SIZE=4>Changelog
+<P STYLE="margin-top: 0.17in"><FONT FACE="Liberation Serif, serif"><FONT SIZE=4>Changelog
 Beta1 – Beta2</FONT></FONT></P>
 <UL>
-	<LI><P>přednačtění seznamu pro zrychlení</P>
-	<LI><P>seznam se načítá postupně</P>
-	<LI><P>opraven pád při opuštění nastavení</P>
-	<LI><P>cachování načteného seznamu farem v paměti</P>
-	<LI><P>při načítání seznamu se použije poslední známá
-	lokace (v B1 bez aktuální lokace seznam nefungoval)</P>
+	<LI><P><FONT FACE="Liberation Serif, serif">přednačtění seznamu
+	pro zrychlení</FONT></P>
+	<LI><P><FONT FACE="Liberation Serif, serif">seznam se načítá
+	postupně</FONT></P>
+	<LI><P><FONT FACE="Liberation Serif, serif">opraven pád při
+	opuštění nastavení</FONT></P>
+	<LI><P><FONT FACE="Liberation Serif, serif">cachování načteného
+	seznamu farem v paměti</FONT></P>
+	<LI><P><FONT FACE="Liberation Serif, serif">při načítání
+	seznamu se použije poslední známá lokace (v B1 bez aktuální
+	lokace seznam nefungoval)</FONT></P>
 	<LI><P></P>
 </UL>
-<P STYLE="margin-top: 0.17in; page-break-after: avoid"><FONT FACE="Albany, sans-serif"><FONT SIZE=4>TODO
+<P STYLE="margin-top: 0.17in; page-break-after: avoid"><FONT FACE="Liberation Serif, serif"><FONT SIZE=4>TODO
 list</FONT></FONT></P>
 <UL>
-	<LI><P>vytvořit pořádné stránky</P>
+	<LI><P><FONT FACE="Liberation Serif, serif">vytvořit pořádné
+	stránky</FONT></P>
 	<UL>
-		<LI><P>jak funguje nacitani listu</P>
-		<LI><P>jak funguje mapa</P>
-		<LI><P>jak funguje ziskavani lokace</P>
-		<LI><P>co s daty</P>
-		<LI><P>posilejte nam vlastni farmy :)</P>
+		<LI><P><FONT FACE="Liberation Serif, serif">jak funguje nacitani
+		listu</FONT></P>
+		<LI><P><FONT FACE="Liberation Serif, serif">jak funguje mapa</FONT></P>
+		<LI><P><FONT FACE="Liberation Serif, serif">jak funguje ziskavani
+		lokace</FONT></P>
+		<LI><P><FONT FACE="Liberation Serif, serif">co s daty</FONT></P>
+		<LI><P><FONT FACE="Liberation Serif, serif">posilejte nam vlastni
+		farmy :)</FONT></P>
 	</UL>
-	<LI><P>zmerit, jestli by tabulka contacts nesla zoptimalizovat</P>
-	<LI><P>foreign keys</P>
-	<LI><P>zkontrolovat farmy bez produkce / aktivit</P>
-	<LI><P>vizualizovat z databaze</P>
+	<LI><P><FONT FACE="Liberation Serif, serif">možnost exportovat
+	farmu do kontaktů</FONT></P>
+	<LI><P><FONT FACE="Liberation Serif, serif">naviguj na</FONT></P>
+	<LI><P><FONT FACE="Liberation Serif, serif">zmerit, jestli by
+	tabulka contacts nesla zoptimalizovat</FONT></P>
+	<LI><P><FONT FACE="Liberation Serif, serif">foreign keys</FONT></P>
+	<LI><P><FONT FACE="Liberation Serif, serif">zkontrolovat farmy bez
+	produkce / aktivit</FONT></P>
+	<LI><P><FONT FACE="Liberation Serif, serif">vizualizovat z databaze</FONT></P>
 	<UL>
-		<LI><P>typy divize (eshop, farma, bioklub, ...) 
+		<LI><P><FONT FACE="Liberation Serif, serif">typy divize (eshop,
+		farma, bioklub, ...) </FONT>
 		</P>
 	</UL>
-	<LI><P>cachování map (bude možná potřebovat přejít na
-	<A HREF="https://code.google.com/p/osmdroid/">https://code.google.com/p/osmdroid/</A>
-	nebo bing nebo amazon or whatever)</P>
-	<LI><P>zobrazovat aktuální polohu na mapě</P>
-	<LI><P>send crash dump</P>
-	<LI><P>integrovat 'naviguj k'</P>
-	<LI><P>testy</P>
-	<LI><P>lepsi text licence 
+	<LI><P><FONT FACE="Liberation Serif, serif">cachování map (bude
+	možná potřebovat přejít na <A HREF="https://code.google.com/p/osmdroid/">https://code.google.com/p/osmdroid/</A>
+	nebo bing nebo amazon or whatever)</FONT></P>
+	<LI><P><FONT FACE="Liberation Serif, serif">zobrazovat aktuální
+	polohu na mapě</FONT></P>
+	<LI><P><FONT FACE="Liberation Serif, serif">send crash dump</FONT></P>
+	<LI><P><FONT FACE="Liberation Serif, serif">integrovat 'naviguj k'</FONT></P>
+	<LI><P><FONT FACE="Liberation Serif, serif">testy</FONT></P>
+	<LI><P><FONT FACE="Liberation Serif, serif">lepsi text licence </FONT>
 	</P>
-	<LI><P>ulozeni defaultni polohy z mapy</P>
-	<LI><P>automatické buildsety</P>
+	<LI><P><FONT FACE="Liberation Serif, serif">ulozeni defaultni polohy
+	z mapy</FONT></P>
+	<LI><P><FONT FACE="Liberation Serif, serif">automatické buildsety</FONT></P>
 	<UL>
-		<LI><P>debugování</P>
-		<LI><P>logy</P>
-		<LI><P>map apikey</P>
-		<LI><P>podpisování</P>
+		<LI><P><FONT FACE="Liberation Serif, serif">debugování</FONT></P>
+		<LI><P><FONT FACE="Liberation Serif, serif">logy</FONT></P>
+		<LI><P><FONT FACE="Liberation Serif, serif">map apikey</FONT></P>
+		<LI><P><FONT FACE="Liberation Serif, serif">podpisování</FONT></P>
 	</UL>
-	<LI><P>vypnout logování</P>
-	<LI><P>čeština na google play</P>
-	<LI><P>lokalizace a regiony</P>
-	<LI><P>co s farmami bez informací?</P>
+	<LI><P><FONT FACE="Liberation Serif, serif">vypnout logování</FONT></P>
+	<LI><P><FONT FACE="Liberation Serif, serif">čeština na google play</FONT></P>
+	<LI><P><FONT FACE="Liberation Serif, serif">lokalizace a regiony</FONT></P>
+	<LI><P><FONT FACE="Liberation Serif, serif">co s farmami bez
+	informací?</FONT></P>
 </UL>
-<P STYLE="margin-top: 0.17in; page-break-after: avoid"><FONT FACE="Albany, sans-serif"><FONT SIZE=4>Plánované
+<P STYLE="margin-top: 0.17in; page-break-after: avoid"><FONT FACE="Liberation Serif, serif"><FONT SIZE=4>Plánované
 vlastnosti</FONT></FONT></P>
 <UL>
-	<LI><P>filtry</P>
-	<LI><P>help</P>
-	<LI><P>?sezónnost?</P>
-	<LI><P>Umožnit uložení na sd</P>
-	<LI><P>využívat uloženého stavu</P>
-	<LI><P>Převést na nové api</P>
-	<LI><P>zkrášlit</P>
-	<LI><P>feedback 
+	<LI><P><FONT FACE="Liberation Serif, serif">filtry</FONT></P>
+	<LI><P><FONT FACE="Liberation Serif, serif">help</FONT></P>
+	<LI><P><FONT FACE="Liberation Serif, serif">?sezónnost?</FONT></P>
+	<LI><P><FONT FACE="Liberation Serif, serif">Umožnit uložení na sd</FONT></P>
+	<LI><P><FONT FACE="Liberation Serif, serif">využívat uloženého
+	stavu</FONT></P>
+	<LI><P><FONT FACE="Liberation Serif, serif">Převést na nové api</FONT></P>
+	<LI><P><FONT FACE="Liberation Serif, serif">zkrášlit</FONT></P>
+	<LI><P><FONT FACE="Liberation Serif, serif">feedback </FONT>
 	</P>
-	<LI><P>pošli svoji farmu (obchod)</P>
-	<LI><P>integrovat adresáře třetích stran?</P>
-	<LI><P>Fotky / odkaz na google streetview</P>
+	<LI><P><FONT FACE="Liberation Serif, serif">pošli svoji farmu
+	(obchod)</FONT></P>
+	<LI><P><FONT FACE="Liberation Serif, serif">integrovat adresáře
+	třetích stran?</FONT></P>
+	<LI><P><FONT FACE="Liberation Serif, serif">Fotky / </FONT>odkaz na
+	google streetview</P>
 </UL>
 </BODY>
 </HTML>
