--- a/BioadresarAndroid/web/index.html
+++ b/BioadresarAndroid/web/index.html
@@ -7,7 +7,7 @@
 	<META NAME="AUTHOR" CONTENT="loki ">
 	<META NAME="CREATED" CONTENT="20120819;18483400">
 	<META NAME="CHANGEDBY" CONTENT="loki ">
-	<META NAME="CHANGED" CONTENT="20130127;18413900">
+	<META NAME="CHANGED" CONTENT="20130127;19084900">
 	<META NAME="CHANGEDBY" CONTENT="loki ">
 	<META NAME="CHANGEDBY" CONTENT="loki ">
 	<META NAME="CHANGEDBY" CONTENT="loki ">
@@ -25,9 +25,9 @@
 <BODY LANG="en-US" DIR="LTR">
 <H1>Adresář zemědělců</H1>
 <P ALIGN=LEFT STYLE="margin-top: 0.17in; page-break-after: avoid"><FONT FACE="Albany, sans-serif"><FONT SIZE=4>Aktuální
-verze: <A HREF="http://trilobajt.cz/adresar/AdresarFarmaru-beta2.apk">Beta
-2</A></FONT></FONT></P>
-<P><IMG SRC="qr-beta2.png" NAME="graphics1" ALIGN=BOTTOM WIDTH=312 HEIGHT=312 BORDER=0>
+verze: <A HREF="http://trilobajt.cz/adresar/AdresarFarmaru-beta3-pre5.apk">Beta
+3 pre 5</A></FONT></FONT></P>
+<P><IMG SRC="qr-beta3pre5.png" NAME="graphics1" ALIGN=BOTTOM WIDTH=312 HEIGHT=312 BORDER=0>
 </P>
 <P STYLE="margin-top: 0.17in; page-break-after: avoid"><FONT FACE="Liberation Serif, serif"><FONT SIZE=4>Známé
 chyby</FONT></FONT></P>
@@ -36,7 +36,7 @@ chyby</FONT></FONT></P>
 	puštění “dalších 25” načte 25 – count(zobrazené farmy)</FONT></P>
 </UL>
 <P STYLE="margin-top: 0.17in; page-break-after: avoid"><FONT FACE="Liberation Serif, serif"><FONT SIZE=4>Changelog
-Beta3 – Beta4</FONT></FONT></P>
+Beta4 – Beta5</FONT></FONT></P>
 <UL>
 	<LI><P STYLE="margin-top: 0.17in; font-weight: normal"><FONT FACE="Liberation Serif, serif"><FONT SIZE=3>výchozí
 	poloha změněna na kraje</FONT></FONT></P>
