--- a/BioadresarAndroid/web/index.html
+++ b/BioadresarAndroid/web/index.html
@@ -7,7 +7,8 @@
 	<META NAME="AUTHOR" CONTENT="loki ">
 	<META NAME="CREATED" CONTENT="20120819;18483400">
 	<META NAME="CHANGEDBY" CONTENT="loki ">
-	<META NAME="CHANGED" CONTENT="20130127;19084900">
+	<META NAME="CHANGED" CONTENT="20130208;12402700">
+	<META NAME="CHANGEDBY" CONTENT="loki ">
 	<META NAME="CHANGEDBY" CONTENT="loki ">
 	<META NAME="CHANGEDBY" CONTENT="loki ">
 	<META NAME="CHANGEDBY" CONTENT="loki ">
@@ -25,9 +26,8 @@
 <BODY LANG="en-US" DIR="LTR">
 <H1>Adresář zemědělců</H1>
 <P ALIGN=LEFT STYLE="margin-top: 0.17in; page-break-after: avoid"><FONT FACE="Albany, sans-serif"><FONT SIZE=4>Aktuální
-verze: <A HREF="http://trilobajt.cz/adresar/AdresarFarmaru-beta3-pre5.apk">Beta
-3 pre 5</A></FONT></FONT></P>
-<P><IMG SRC="qr-beta3pre5.png" NAME="graphics1" ALIGN=BOTTOM WIDTH=312 HEIGHT=312 BORDER=0>
+verze: <A HREF="http://trilobajt.cz/adresar/AdresarFarmaru-RC1.apk">RC1</A></FONT></FONT></P>
+<P><IMG SRC="qr-RC1.png" NAME="graphics1" ALIGN=BOTTOM WIDTH=312 HEIGHT=312 BORDER=0>
 </P>
 <P STYLE="margin-top: 0.17in; page-break-after: avoid"><FONT FACE="Liberation Serif, serif"><FONT SIZE=4>Známé
 chyby</FONT></FONT></P>
@@ -36,6 +36,17 @@ chyby</FONT></FONT></P>
 	puštění “dalších 25” načte 25 – count(zobrazené farmy)</FONT></P>
 </UL>
 <P STYLE="margin-top: 0.17in; page-break-after: avoid"><FONT FACE="Liberation Serif, serif"><FONT SIZE=4>Changelog
+Beta5 – RC1</FONT></FONT></P>
+<UL>
+	<LI><P STYLE="margin-top: 0.17in"><FONT FACE="Liberation Serif, serif"><FONT SIZE=3>odstraněna
+	vstupní obrazovka, přidán ActionBar</FONT></FONT></P>
+	<LI><P STYLE="margin-top: 0.17in"><FONT FACE="Liberation Serif, serif"><FONT SIZE=3>po
+	návratu na mapu se tato vrátí na poslední pozici</FONT></FONT></P>
+	<LI><P STYLE="margin-top: 0.17in"><FONT FACE="Liberation Serif, serif"><FONT SIZE=3>bookmarky</FONT></FONT></P>
+	<LI><P STYLE="margin-top: 0.17in"><FONT FACE="Liberation Serif, serif"><FONT SIZE=3>opraven
+	layout detailů farmy</FONT></FONT></P>
+</UL>
+<P STYLE="margin-top: 0.17in"><FONT FACE="Liberation Serif, serif"><FONT SIZE=4>Changelog
 Beta4 – Beta5</FONT></FONT></P>
 <UL>
 	<LI><P STYLE="margin-top: 0.17in; font-weight: normal"><FONT FACE="Liberation Serif, serif"><FONT SIZE=3>výchozí
@@ -97,9 +108,8 @@ list</FONT></FONT></P>
 		<LI><P><FONT FACE="Liberation Serif, serif">posilejte nam vlastni
 		farmy :)</FONT></P>
 	</UL>
-	<LI><P><FONT FACE="Liberation Serif, serif">možnost exportovat
-	farmu do kontaktů</FONT></P>
 	<LI><P><FONT FACE="Liberation Serif, serif">naviguj na</FONT></P>
+	<LI><P><FONT FACE="Liberation Serif, serif">přejít na fragmenty</FONT></P>
 	<LI><P><FONT FACE="Liberation Serif, serif">zmerit, jestli by
 	tabulka contacts nesla zoptimalizovat</FONT></P>
 	<LI><P><FONT FACE="Liberation Serif, serif">foreign keys</FONT></P>
@@ -117,7 +127,6 @@ list</FONT></FONT></P>
 	<LI><P><FONT FACE="Liberation Serif, serif">zobrazovat aktuální
 	polohu na mapě</FONT></P>
 	<LI><P><FONT FACE="Liberation Serif, serif">send crash dump</FONT></P>
-	<LI><P><FONT FACE="Liberation Serif, serif">integrovat 'naviguj k'</FONT></P>
 	<LI><P><FONT FACE="Liberation Serif, serif">testy</FONT></P>
 	<LI><P><FONT FACE="Liberation Serif, serif">lepsi text licence </FONT>
 	</P>
@@ -133,8 +142,6 @@ list</FONT></FONT></P>
 	<LI><P><FONT FACE="Liberation Serif, serif">vypnout logování</FONT></P>
 	<LI><P><FONT FACE="Liberation Serif, serif">čeština na google play</FONT></P>
 	<LI><P><FONT FACE="Liberation Serif, serif">lokalizace a regiony</FONT></P>
-	<LI><P><FONT FACE="Liberation Serif, serif">co s farmami bez
-	informací?</FONT></P>
 </UL>
 <P STYLE="margin-top: 0.17in; page-break-after: avoid"><FONT FACE="Liberation Serif, serif"><FONT SIZE=4>Plánované
 vlastnosti</FONT></FONT></P>
@@ -142,9 +149,6 @@ vlastnosti</FONT></FONT></P>
 	<LI><P><FONT FACE="Liberation Serif, serif">filtry</FONT></P>
 	<LI><P><FONT FACE="Liberation Serif, serif">help</FONT></P>
 	<LI><P><FONT FACE="Liberation Serif, serif">?sezónnost?</FONT></P>
-	<LI><P><FONT FACE="Liberation Serif, serif">Umožnit uložení na sd</FONT></P>
-	<LI><P><FONT FACE="Liberation Serif, serif">využívat uloženého
-	stavu</FONT></P>
 	<LI><P><FONT FACE="Liberation Serif, serif">Převést na nové api</FONT></P>
 	<LI><P><FONT FACE="Liberation Serif, serif">zkrášlit</FONT></P>
 	<LI><P><FONT FACE="Liberation Serif, serif">feedback </FONT>
