--- a/BioadresarAndroid/web/notes/index.html
+++ b/BioadresarAndroid/web/notes/index.html
@@ -7,7 +7,8 @@
 	<META NAME="AUTHOR" CONTENT="loki ">
 	<META NAME="CREATED" CONTENT="20120819;18483400">
 	<META NAME="CHANGEDBY" CONTENT="loki ">
-	<META NAME="CHANGED" CONTENT="20130314;14153000">
+	<META NAME="CHANGED" CONTENT="20130531;17220800">
+	<META NAME="CHANGEDBY" CONTENT="loki ">
 	<META NAME="CHANGEDBY" CONTENT="loki ">
 	<META NAME="CHANGEDBY" CONTENT="loki ">
 	<META NAME="CHANGEDBY" CONTENT="loki ">
@@ -97,6 +98,9 @@ Beta1 – Beta2</FONT></FONT></P>
 <P STYLE="margin-top: 0.17in; page-break-after: avoid"><FONT FACE="Liberation Serif, serif"><FONT SIZE=4>TODO
 list</FONT></FONT></P>
 <UL>
+	<LI><P><FONT FACE="Liberation Serif, serif">defaultni poloha +
+	zadavani</FONT></P>
+	<LI><P><FONT FACE="Liberation Serif, serif">search / filter</FONT></P>
 	<LI><P><FONT FACE="Liberation Serif, serif">naviguj na</FONT></P>
 	<LI><P><FONT FACE="Liberation Serif, serif">přejít na fragmenty</FONT></P>
 	<LI><P><FONT FACE="Liberation Serif, serif">zmerit, jestli by
